welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: ';' expected but integer literal found.
  var pos : =-1
              ^